# ProjectIO

./: .gitignore  .travis.yml  CMakeParser.sln  ProjectIO.sln  README.md
CMakeLister/: CMakeLister.csproj  Program.cs
CMakeParser/: AddBinary.cs  AddCompileDefinitions.cs  Builder.cs  CMakeLists.cs  CMakeParser.csproj  File.cs  GetFileNameComponent.cs  GetFilenameComponent.cs  ICommand.cs  IWriter.cs  Ignore.cs  IncludeDirectories.cs  Set.cs  SourceGroup.cs  State.cs  TargetCompileDefinitions.cs  TargetIncludeDirectories.cs  TargetLinkLibraries.cs  TargetSources.cs  Utilities.cs
CMakeToVisualStudio/: CMakeToVisualStudio.csproj  CMakeToVisualStudio.nuspec  Program.cs  pack.bat
Common/: Binary.cs  Builder.cs  Common.csproj  IWriter.cs
Core/: CSharp.cs  Core.csproj  Cpp.cs  ILogger.cs  Paths.cs  Project.cs  VBasic.cs
ProjectIO.CMakeLister/: ProjectIO.CMakeLister.csproj
ProjectIO.CMakeParser/: AddBinary.cs  File.cs  Ignore.cs  IncludeDirectories.cs  ProjectIO.CMakeParser.csproj  Set.cs  SourceGroup.cs  State.cs  TargetCompileDefinitions.cs  TargetLinkLibraries.cs  Utilities.cs
ProjectIO.CMakeToVisualStudio/: CMakeToVisualStudio.nuspec  Program.cs  ProjectIO.CMakeToVisualStudio.csproj
ProjectIO.Core/: ILogger.cs  Project.cs  ProjectIO.Core.csproj
ProjectIO.Test/: ProjectIO.Test.csproj  Tests.cs
ProjectIO.VStoVS/: ProjectIO.VStoVS.csproj
ProjectIO.VisualStudio/: Proj.cs  ProjectIO.VisualStudio.csproj  VBProj.cs  XMLUtils.cs
ProjectIO.VisualStudioToCMake/: CMakeProject.cs  ProjectIO.VisualStudioToCMake.csproj  (+2 more)
Test/Data/Source/Environment/: CMakeLists.txt
(+51 files in other folders)
